chore: update dependencies and add prerequisite step for execution

--- a/README.adoc
+++ b/README.adoc
@@ -25,6 +25,18 @@ You will need
 - a Download ZIP of this repository, see the [Code] button in the top right and unpack it.
 - Open the project via the `pom.xml` in your IDE.
 - Check you can do a maven install of the root project (on the right in IntelliJ)
+- Set VM Options of your run configurations to open necessary modules (see also [blog post on Java 17 support](https://chronicle.software/chronicle-support-java-17/)):
+```
+--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED
+--add-exports=java.base/sun.nio.ch=ALL-UNNAMED
+--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED
+--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
+--add-opens=jdk.compiler/com.sun.tools.javac=ALL-UNNAMED
+--add-opens=java.base/java.lang=ALL-UNNAMED
+--add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+--add-opens=java.base/java.io=ALL-UNNAMED
+--add-opens=java.base/java.util=ALL-UNNAMED
+```
 
 === Stack Traces
 
